# sustainability_parcing

./: README.md  config.yaml  pyproject.toml  requirements.txt
src/: gpt_utils.py  main.py  output_format.py  settings.py  utils.py
